fix: truncate project name to 2 lines in mobile

--- a/src/features/user/MFV2/MyContributions/MyContributions.module.scss
+++ b/src/features/user/MFV2/MyContributions/MyContributions.module.scss
@@ -288,6 +288,12 @@
 
     .projectName {
       font-weight: 600;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2; /* number of lines to show */
+      line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
 
     .projectType {
